--- a/src/main/resources/views/logini.fxml
+++ b/src/main/resources/views/logini.fxml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!--<?import com.gluonhq.charm.glisten.control.TextField?>-->
+
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<?import javafx.scene.control.TextField?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml" fx:controller="Controllers.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.LoginController">
    <children>
       <Label layoutX="281.0" layoutY="119.0" text="Email">
          <font>
@@ -28,6 +28,6 @@
             <Font size="27.0" />
          </font>
       </Label>
-      <Button fx:id="handleLogin" layoutX="272.0" layoutY="273.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="56.0" text="Login" />
+      <Button fx:id="loginButton" layoutX="272.0" layoutY="273.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="32.0" prefWidth="56.0" text="Login" />
    </children>
 </AnchorPane>
