--- a/src/main/resources/views/maintenance.fxml
+++ b/src/main/resources/views/maintenance.fxml
@@ -14,7 +14,7 @@
       <TableView layoutX="14.0" layoutY="49.0" prefHeight="128.0" prefWidth="452.0">
         <columns>
           <TableColumn prefWidth="75.0" text="id" />
-          <TableColumn prefWidth="75.0" text="room_id" />
+          <TableColumn prefWidth="75.0" text="elona" />
             <TableColumn prefWidth="75.0" text="reported_by" />
             <TableColumn prefWidth="75.0" text="description" />
             <TableColumn prefWidth="75.0" text="status" />
@@ -37,5 +37,11 @@
             </Button>
          </children>
       </VBox>
+      <TableView layoutX="140.0" layoutY="177.0" prefHeight="200.0" prefWidth="200.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="C1" />
+          <TableColumn prefWidth="75.0" text="C2" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
