--- a/src/main/resources/views/maintenance.fxml
+++ b/src/main/resources/views/maintenance.fxml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="14.0" layoutY="14.0" prefHeight="35.0" prefWidth="190.0" text="Tabela e mirembajtjes" />
-      <TableView fx:id="maintenanceTable" layoutX="14.0" layoutY="49.0" prefHeight="128.0" prefWidth="452.0">
+      <TableView fx:id="maintenanceTable" layoutX="14.0" layoutY="72.0" prefHeight="202.0" prefWidth="452.0">
         <columns>
           <TableColumn fx:id="maintenanceIdColumn" prefWidth="75.0" text="id" />
           <TableColumn fx:id="roomIdColumn" prefWidth="75.0" text="room_id" />
@@ -21,9 +24,9 @@
             <TableColumn fx:id="reportedAtColumn" prefWidth="75.0" text="reported_at" />
         </columns>
       </TableView>
-      <VBox layoutX="486.0" layoutY="49.0" prefHeight="128.0" prefWidth="100.0">
+      <VBox layoutX="486.0" layoutY="72.0" prefHeight="128.0" prefWidth="100.0">
          <children>
-            <Button fx:id="addbutton" mnemonicParsing="false" prefHeight="49.0" prefWidth="99.0" text="Add" />
+            <Button fx:id="addbutton" mnemonicParsing="false" prefHeight="45.0" prefWidth="100.0" text="Add" />
             <Button fx:id="deleteButton" mnemonicParsing="false" prefHeight="52.0" prefWidth="99.0" text="Delete" />
             <Button fx:id="editButton" mnemonicParsing="false" prefHeight="49.0" prefWidth="100.0" text="Edit">
                <font>
@@ -32,5 +35,13 @@
             </Button>
          </children>
       </VBox>
+      <TextField fx:id="searchField" layoutX="250.0" layoutY="14.0" prefHeight="26.0" prefWidth="99.0" promptText="Serach..." />
+      <ComboBox layoutX="366.0" layoutY="14.0" prefHeight="26.0" prefWidth="99.0" promptText="Search By" visibleRowCount="6" />
+      <Button layoutX="486.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="99.0" text="Search" />
+      <HBox layoutX="14.0" layoutY="276.0" prefHeight="35.0" prefWidth="137.0">
+         <children>
+            <Label text="Total rows: 0" />
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
