--- a/src/main/resources/views/maintenance.fxml
+++ b/src/main/resources/views/maintenance.fxml
@@ -36,8 +36,8 @@
          </children>
       </VBox>
       <TextField fx:id="searchField" layoutX="250.0" layoutY="14.0" prefHeight="26.0" prefWidth="99.0" promptText="Serach..." />
-      <ComboBox layoutX="366.0" layoutY="14.0" prefHeight="26.0" prefWidth="99.0" promptText="Search By" visibleRowCount="6" />
-      <Button layoutX="486.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="99.0" text="Search" />
+      <ComboBox fx:id="searchByComboBox" layoutX="366.0" layoutY="14.0" prefHeight="26.0" prefWidth="99.0" promptText="Search By" visibleRowCount="6" />
+      <Button fx:id="searchButton" layoutX="486.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="99.0" text="Search" />
       <HBox layoutX="14.0" layoutY="276.0" prefHeight="35.0" prefWidth="137.0">
          <children>
             <Label text="Total rows: 0" />
