--- a/src/main/resources/views/home.fxml
+++ b/src/main/resources/views/home.fxml
@@ -7,7 +7,12 @@
 <?import javafx.scene.text.Font?>
 
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" type="Pane" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.HomeController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+      prefHeight="400.0" prefWidth="600.0"
+      xmlns="http://javafx.com/javafx/23.0.1"
+      xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="Controllers.HomeController">
+
    <children>
       <Label alignment="CENTER" layoutX="153.0" layoutY="26.0" prefHeight="63.0" prefWidth="262.0" text="Hotel ">
          <font>
@@ -44,4 +49,4 @@
          </children>
       </HBox>
    </children>
-</fx:root>
+</Pane>
