--- a/src/main/resources/views/offers.fxml
+++ b/src/main/resources/views/offers.fxml
@@ -1,43 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.OffersController">
-    <children>
-        <VBox alignment="TOP_CENTER" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <children>
-                <Label styleClass="header" text="Current Offers">
-                    <font>
-                        <Font name="System Bold" size="24.0" />
-                    </font>
-                    <VBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </VBox.margin>
-                </Label>
+<AnchorPane xmlns="http://javafx.com/javafx/17.0.2"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="Controllers.OffersController">
 
-                <TableView fx:id="offersTable" VBox.vgrow="ALWAYS">
-                    <columns>
-                        <TableColumn fx:id="titleColumn" minWidth="150" text="Offer Title" />
-                        <TableColumn fx:id="discountColumn" minWidth="100" text="Discount" />
-                        <TableColumn fx:id="validUntilColumn" minWidth="120" text="Valid Until" />
-                    </columns>
-                    <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                    </columnResizePolicy>
-                </TableView>
+    <VBox alignment="TOP_CENTER" spacing="10.0"
+          AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+          AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 
-                <HBox alignment="CENTER" spacing="20.0" style="-fx-padding: 10;">
-                    <Label text="Today's Date:" />
-                    <Label fx:id="currentDateLabel" style="-fx-font-weight: bold;" />
-                </HBox>
-            </children>
+        <Label fx:id="lblTitle" text="Current Offers"
+               style="-fx-font-weight: bold; -fx-font-size: 24;">
+            <font>
+                <Font name="System Bold" size="24.0" />
+            </font>
+            <VBox.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            </VBox.margin>
+        </Label>
+
+        <VBox fx:id="offersContainer" spacing="10.0" VBox.vgrow="ALWAYS">
+            <!-- Dynamic offers will be inserted here -->
         </VBox>
-    </children>
+
+        <HBox alignment="CENTER" spacing="20.0" style="-fx-padding: 10;">
+            <Label text="Today's Date:" />
+            <Label fx:id="currentDateLabel" style="-fx-font-weight: bold;" />
+        </HBox>
+
+        <Button fx:id="btnBackToHome" text="Back to Home"
+                style="-fx-font-size: 14px; -fx-padding: 5 10 5 10;"/>
+    </VBox>
 </AnchorPane>
