--- a/src/main/resources/views/offers.fxml
+++ b/src/main/resources/views/offers.fxml
@@ -1,38 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/17.0.2"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="Controllers.OffersController">
-
-    <VBox alignment="TOP_CENTER" spacing="10.0"
-          AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-          AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-
-        <Label fx:id="lblTitle" text="Current Offers"
-               style="-fx-font-weight: bold; -fx-font-size: 24;">
-            <font>
-                <Font name="System Bold" size="24.0" />
-            </font>
-            <VBox.margin>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-            </VBox.margin>
-        </Label>
-
-        <VBox fx:id="offersContainer" spacing="10.0" VBox.vgrow="ALWAYS">
-            <!-- Dynamic offers will be inserted here -->
-        </VBox>
-
-        <HBox alignment="CENTER" spacing="20.0" style="-fx-padding: 10;">
-            <Label text="Today's Date:" />
-            <Label fx:id="currentDateLabel" style="-fx-font-weight: bold;" />
-        </HBox>
-
-        <Button fx:id="btnBackToHome" text="Back to Home"
-                style="-fx-font-size: 14px; -fx-padding: 5 10 5 10;"/>
-    </VBox>
+<AnchorPane prefHeight="378.0" prefWidth="324.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.OffersController">
+   <children>
+      <Label fx:id="currentDateLabel" alignment="CENTER" layoutX="100.0" layoutY="323.0" prefHeight="26.0" prefWidth="90.0" text="todays date" AnchorPane.bottomAnchor="28.600000000000023" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" />
+      <Label fx:id="lblTitle" alignment="CENTER" layoutX="74.0" layoutY="15.0" prefHeight="40.0" prefWidth="175.0" text="Current Offers ">
+         <font>
+            <Font name="Baskerville Old Face" size="24.0" />
+         </font>
+      </Label>
+      <TableView layoutY="60.0" prefHeight="263.0" prefWidth="324.0">
+        <columns>
+          <TableColumn prefWidth="106.40002286434174" text="Offer Title " />
+          <TableColumn prefWidth="108.79999542236328" text="Discount" />
+            <TableColumn prefWidth="108.800048828125" text="Valid Until" />
+        </columns>
+      </TableView>
+      <Button fx:id="btnBackToHome" layoutX="14.0" layoutY="337.0" mnemonicParsing="false" text="Home" />
+   </children>
 </AnchorPane>
