--- a/src/main/resources/views/cleaningschedule.fxml
+++ b/src/main/resources/views/cleaningschedule.fxml
@@ -25,5 +25,6 @@
       <TextField fx:id="searchBox" layoutX="298.0" layoutY="21.0" promptText="Search" />
       <ComboBox fx:id="comboBox" layoutX="469.0" layoutY="21.0" prefWidth="150.0" promptText="Search By" />
       <Button fx:id="se" layoutX="642.0" layoutY="21.0" mnemonicParsing="false" text="Search" />
+      <Button fx:id="backbutton" layoutX="37.0" layoutY="414.0" mnemonicParsing="false" onAction="#handleback" text="Back" />
    </children>
 </AnchorPane>
