--- a/src/main/resources/views/ReceptionDashboard.fxml
+++ b/src/main/resources/views/ReceptionDashboard.fxml
@@ -1,46 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.BarChart?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.LineChart?>
-<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="475.0" prefWidth="678.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ReceptionDashboardController"
->
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="475.0" prefWidth="678.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ReceptionDashboardController">
    <children>
-      <Label fx:id="lblTitle" layoutX="225.0" layoutY="68.0" text="Paneli i Recepsionit">
+      <Label fx:id="lblTitle" layoutX="211.0" layoutY="66.0" text="Paneli i Recepsionit" textFill="#f0ac00">
          <font>
-            <Font size="24.0" />
+            <Font size="30.0" />
          </font>
       </Label>
-      <BarChart fx:id="barChartUsers" layoutX="283.0" layoutY="103.0" prefHeight="150.0" prefWidth="316.0">
-        <xAxis>
-          <CategoryAxis side="BOTTOM" />
-        </xAxis>
-        <yAxis>
-          <NumberAxis side="LEFT" />
-        </yAxis>
-      </BarChart>
-      <LineChart fx:id="lineChartReservations" layoutX="283.0" layoutY="261.0" prefHeight="194.0" prefWidth="316.0">
-        <xAxis>
-          <CategoryAxis side="BOTTOM" tickLabelFill="RED" />
-        </xAxis>
-        <yAxis>
-          <NumberAxis side="LEFT" />
-        </yAxis>
-      </LineChart>
-      <Label fx:id="lblUserPerRole" layoutX="40.0" layoutY="170.0" prefHeight="17.0" prefWidth="259.0" text="Numri i përdoruesve për çdo rol :">
+      <Label text="Label" />
+      <Label layoutX="80.0" layoutY="216.0" prefHeight="43.0" prefWidth="215.0" text="Zgjidh nje nga opsionet ">
          <font>
-            <Font size="15.0" />
+            <Font size="20.0" />
          </font>
       </Label>
-      <Label fx:id="lblReservationsPerDay" layoutX="36.0" layoutY="322.0" prefHeight="17.0" prefWidth="237.0" text="Numri i rezervimeve për çdo ditë :">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
+      <Line endX="-6.20001220703125" endY="50.399993896484375" layoutX="448.0" layoutY="244.0" startX="-128.70709228515625" startY="-5.7928619384765625" />
+      <Line endX="5.20001220703125" endY="-32.99998474121094" layoutX="437.0" layoutY="228.0" startX="-119.0" startY="8.500015258789062" />
+      <Button fx:id="btnPerRole" onAction="#handlePerRole"
+              layoutX="459.0" layoutY="173.0" mnemonicParsing="false"
+              prefHeight="43.0" prefWidth="180.0"
+              text="Numri perdoruesve per cdo rol" />
+
+      <Button fx:id="btnPerDay" onAction="#handlePerDay"
+              layoutX="459.0" layoutY="274.0" mnemonicParsing="false"
+              prefHeight="43.0" prefWidth="188.0"
+              text="Numri rezervimeve per cdo dite" />
+
    </children>
 </Pane>
