Krijimi i SceneManager dhe i faqes se pare

--- a/src/main/resources/views/logini.fxml
+++ b/src/main/resources/views/logini.fxml
@@ -29,5 +29,6 @@
          <Font size="27.0" />
       </font>
    </Label>
-   <Button fx:id="loginButton" layoutX="272.0" layoutY="281.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="32.0" prefWidth="56.0" text="Login" />
+   <Button fx:id="loginButton" layoutX="272.0" layoutY="253.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="32.0" prefWidth="56.0" text="Login" />
+   <Button layoutX="38.0" layoutY="347.0" mnemonicParsing="false" onAction="#goBack" text="Back" />
 </AnchorPane>
