--- a/src/main/resources/views/signupi.fxml
+++ b/src/main/resources/views/signupi.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.SignupController">
    <children>
       <TextField fx:id="signupEmail1" layoutX="288.0" layoutY="112.0" promptText="name@example.com" />
@@ -26,5 +25,6 @@
       <Button layoutX="262.0" layoutY="336.0" mnemonicParsing="false" onAction="#handleSignup" prefHeight="35.0" prefWidth="81.0" text="Signup" />
       <Label layoutX="181.0" layoutY="84.0" text="Sheno username" />
       <TextField fx:id="signupUsername" layoutX="288.0" layoutY="80.0" />
+      <Button layoutX="22.0" layoutY="358.0" mnemonicParsing="false" onAction="#goBack" text="Back" />
    </children>
 </Pane>
