--- a/src/main/resources/views/home.fxml
+++ b/src/main/resources/views/home.fxml
@@ -2,45 +2,52 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.HomeController" prefHeight="400.0" prefWidth="300.0">
+<AnchorPane maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.HomeController">
    <children>
-      <Label alignment="CENTER" layoutX="153.0" layoutY="26.0" prefHeight="63.0" prefWidth="262.0" text="Hotel ">
-         <font>
-            <Font name="Baskerville Old Face" size="32.0" />
-         </font>
-      </Label>
-      <HBox alignment="CENTER" layoutX="17.0" layoutY="103.0" prefHeight="51.0" prefWidth="563.0" spacing="10.0">
+      <Pane maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0">
          <children>
-            <Button fx:id="btnHome" mnemonicParsing="false" onAction="#handleHome" prefHeight="30.0" prefWidth="100.0" text="Home">
+            <Label alignment="CENTER" layoutX="269.0" layoutY="40.0" prefHeight="63.0" prefWidth="262.0" text="Hotel ">
                <font>
-                  <Font name="Baskerville Old Face" size="16.0" />
+                  <Font name="Baskerville Old Face" size="36.0" />
                </font>
-            </Button>
-            <Button fx:id="btnRooms" mnemonicParsing="false" onAction="#handleRooms" prefHeight="30.0" prefWidth="100.0" text="Rooms">
-               <font>
-                  <Font name="Baskerville Old Face" size="16.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnOffers" mnemonicParsing="false" onAction="#handleOffers" prefHeight="30.0" prefWidth="100.0" text="Offers">
-               <font>
-                  <Font name="Baskerville Old Face" size="16.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnEvents" mnemonicParsing="false" onAction="#handleEvents" prefHeight="30.0" prefWidth="100.0" text="Events">
-               <font>
-                  <Font name="Baskerville Old Face" size="16.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnReservations" mnemonicParsing="false" onAction="#handleReservations" prefHeight="30.0" prefWidth="100.0" text="Reservations">
-               <font>
-                  <Font name="Baskerville Old Face" size="14.0" />
-               </font>
-            </Button>
+            </Label>
+            <HBox alignment="CENTER" layoutX="100.0" layoutY="150.0" prefHeight="60.0" prefWidth="600.0" spacing="20.0">
+               <children>
+                  <Button fx:id="btnHome" mnemonicParsing="false" onAction="#handleHome" prefHeight="40.0" prefWidth="100.0" text="Home">
+                     <font>
+                        <Font name="Baskerville Old Face" size="16.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="btnRooms" mnemonicParsing="false" onAction="#handleRooms" prefHeight="40.0" prefWidth="100.0" text="Rooms">
+                     <font>
+                        <Font name="Baskerville Old Face" size="16.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="btnOffers" mnemonicParsing="false" onAction="#handleOffers" prefHeight="40.0" prefWidth="100.0" text="Offers">
+                     <font>
+                        <Font name="Baskerville Old Face" size="16.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="btnEvents" mnemonicParsing="false" onAction="#handleEvents" prefHeight="40.0" prefWidth="100.0" text="Events">
+                     <font>
+                        <Font name="Baskerville Old Face" size="16.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="btnReservations" mnemonicParsing="false" onAction="#handleReservations" prefHeight="40.0" prefWidth="100.0" text="Reservations">
+                     <font>
+                        <Font name="Baskerville Old Face" size="14.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
+            <Button fx:id="accBtn" alignment="CENTER" layoutX="320.0" layoutY="342.0" mnemonicParsing="false" text="Sing in or Create an Accont" textAlignment="CENTER" />
+            <Label layoutX="311.0" layoutY="317.0" text="If you want to make a reservation" />
          </children>
-      </HBox>
+      </Pane>
    </children>
-</Pane>
+</AnchorPane>
