--- a/src/main/resources/views/offers.fxml
+++ b/src/main/resources/views/offers.fxml
@@ -7,21 +7,23 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.OffersController">
+<AnchorPane prefHeight="600" prefWidth="800" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.OffersController">
    <children>
-      <Label fx:id="currentDateLabel" alignment="CENTER" layoutX="100.0" layoutY="323.0" prefHeight="26.0" prefWidth="90.0" text="todays date" AnchorPane.bottomAnchor="28.600000000000023" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" />
-      <Label fx:id="lblTitle" alignment="CENTER" layoutX="74.0" layoutY="15.0" prefHeight="40.0" prefWidth="175.0" text="Current Offers ">
+      <Label fx:id="currentDateLabel" alignment="CENTER" layoutX="350.0" layoutY="520.0" prefWidth="100.0" text="todays date" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" />
+      <Label fx:id="lblTitle" alignment="CENTER" layoutX="300.0" layoutY="20.0" prefHeight="40.0" prefWidth="175.0" text="Current Offers " AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0">
          <font>
             <Font name="Baskerville Old Face" size="24.0" />
          </font>
       </Label>
-      <TableView layoutY="60.0" prefHeight="263.0" prefWidth="400.0">
+      <TableView fx:id="offersTable" layoutX="50.0" layoutY="70.0" prefHeight="420.0" prefWidth="700.0">
         <columns>
-          <TableColumn prefWidth="106.40002286434174" text="Offer Title " />
-          <TableColumn prefWidth="108.79999542236328" text="Discount" />
-            <TableColumn prefWidth="108.800048828125" text="Valid Until" />
+            <TableColumn fx:id="titleCol" prefWidth="100.0" text="Title" />
+            <TableColumn fx:id="descriptionCol" prefWidth="236.00006103515625" text="Description" />
+            <TableColumn fx:id="discountCol" prefWidth="100.0" text="Discount %" />
+            <TableColumn fx:id="startDateCol" prefWidth="133.0" text="Start Date" />
+            <TableColumn fx:id="endDateCol" prefWidth="133.0" text="End Date" />
         </columns>
       </TableView>
-      <Button fx:id="btnBackToHome" layoutX="14.0" layoutY="337.0" mnemonicParsing="false" text="Home" />
+      <Button fx:id="btnBackToHome" layoutX="50.0" layoutY="510.0" mnemonicParsing="false" prefWidth="100" text="Home" />
    </children>
 </AnchorPane>
