--- a/src/main/resources/views/Room.fxml
+++ b/src/main/resources/views/Room.fxml
@@ -1,31 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/23.0.1"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="Controllers.RoomsController">
+<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.RoomsController">
 
     <top>
         <HBox alignment="CENTER" style="-fx-background-color: #2c3e50; -fx-padding: 15;">
-            <Label text="Hotel Room Management"
-                   style="-fx-text-fill: white; -fx-font-size: 24; -fx-font-weight: bold;" />
+            <Label style="-fx-text-fill: white; -fx-font-size: 24; -fx-font-weight: bold;" text="Hotel Room Management" />
         </HBox>
     </top>
 
     <center>
-        <ScrollPane fitToWidth="true" fitToHeight="true" style="-fx-padding: 10;">
-            <VBox fx:id="roomListVBox"
-                  spacing="20"
-                  alignment="TOP_CENTER"
-                  style="-fx-padding: 20;" />
+        <ScrollPane fitToHeight="true" fitToWidth="true" style="-fx-padding: 10;">
+            <VBox fx:id="roomListVBox" alignment="TOP_CENTER" spacing="20" style="-fx-padding: 20;" />
         </ScrollPane>
     </center>
 
     <bottom>
-        <HBox alignment="CENTER" style="-fx-background-color: #ecf0f1; -fx-padding: 10;">
-            <Label text="© 2025 Hotel Management System" />
+        <HBox style="-fx-background-color: #ecf0f1; -fx-padding: 10;">
+            <Button fx:id="btnBackToHome" onAction="#goBackToHome" prefWidth="100" text="Home" />
+
+            <Region fx:id="spacer" HBox.hgrow="ALWAYS" />
+
+            <Label alignment="CENTER" text="© 2025 Hotel Management System" />
         </HBox>
     </bottom>
 
