Ndrrim tek Logini

--- a/src/main/resources/views/logini.fxml
+++ b/src/main/resources/views/logini.fxml
@@ -1,34 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!--<?import com.gluonhq.charm.glisten.control.TextField?>-->
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.LoginController">
+<AnchorPane prefHeight="450.0" prefWidth="700.0" style="-fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #f5e9dc 0%, #e9dbc9 100%);                    -fx-border-radius: 15; -fx-background-radius: 15; -fx-padding: 20;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.LoginController">
+   <!-- Ikona e kyçjes -->
+   <Label layoutX="202.0" layoutY="60.0" style="-fx-font-size: 32px; -fx-text-fill: #432e1e; -fx-font-weight: 600;" text="🔒 Log in to continue" />
 
+   <!-- Email Label -->
+   <Label layoutX="150.0" layoutY="150.0" style="-fx-font-size: 17px; -fx-text-fill: #432e1e;" text="Email:" />
+   <!-- Email Field -->
+   <TextField fx:id="emailField" layoutX="240.0" layoutY="145.0" prefWidth="240.0" promptText="Shkruaj emailin" style="-fx-background-radius: 15; -fx-border-radius: 15; -fx-background-color: #fffdf9; -fx-border-color: #c1b0a0; -fx-font-size: 15px; -fx-padding: 4 10;" />
 
-   <Label layoutX="281.0" layoutY="118.0" text="Email">
-      <font>
-         <Font size="16.0" />
-      </font>
-   </Label>
-   <Label layoutX="265.0" layoutY="187.0" text="Password:">
-      <font>
-         <Font size="16.0" />
-      </font>
-   </Label>
-   <TextField fx:id="emailField" layoutX="225.0" layoutY="143.0" opacity="0.75" promptText="sheno emailin" />
-   <PasswordField id="password" fx:id="passwordField" layoutX="225.0" layoutY="212.0" promptText="sheno passwordin" />
-   <Label layoutX="146.0" layoutY="14.0" text="Miresevini ne Faqen tone!">
-      <font>
-         <Font size="27.0" />
-      </font>
-   </Label>
-   <Button fx:id="loginButton" layoutX="272.0" layoutY="253.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="32.0" prefWidth="56.0" text="Login" />
-   <Button layoutX="38.0" layoutY="347.0" mnemonicParsing="false" onAction="#goBack" text="Back" />
+   <!-- Password Label -->
+   <Label layoutX="150.0" layoutY="200.0" style="-fx-font-size: 17px; -fx-text-fill: #432e1e;" text="Password:" />
+   <!-- Password Field -->
+   <PasswordField fx:id="passwordField" layoutX="240.0" layoutY="195.0" prefWidth="240.0" promptText="Shkruaj fjalëkalimin" style="-fx-background-radius: 15; -fx-border-radius: 15; -fx-background-color: #fffdf9; -fx-border-color: #c1b0a0; -fx-font-size: 15px; -fx-padding: 4 10;" />
+
+   <!-- Login Button -->
+   <Button fx:id="loginButton" layoutX="240.0" layoutY="260.0" onAction="#handleLogin" prefHeight="38.0" prefWidth="120.0" style="-fx-background-color: #a38467; -fx-text-fill: #fffaf4; -fx-font-size: 17px; -fx-background-radius: 20; -fx-font-weight: bold;" text="🔒  Login" />
+
+   <!-- Back Button -->
+   <Button layoutX="380.0" layoutY="260.0" onAction="#goBack" prefHeight="38.0" prefWidth="100.0" style="-fx-background-color: #cfb89b; -fx-text-fill: #fffaf4; -fx-font-size: 16px; -fx-background-radius: 20;" text="⟲  Back" />
 </AnchorPane>
